--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "main": "src",
+  "devDependencies": {
+    "@types/react": "^17.0.19",
+    "@types/react-native": "^0.64.13",
+    "typescript": "^4.4.2"
+  },
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
