--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,7 +9,17 @@
     "typescript": "^4.4.2"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
+    "react": "18.1.0",
+    "react-native": "0.70.4"
+  },
+  "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-reanimated": "^2.12.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "solito": "^1.0.12"
   }
 }
