--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@my-app/app": "*",
     "react": "18.1.0",
-    "react-native": "0.70.4"
+    "react-native": "0.70.4",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
