--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -10,13 +10,10 @@
   },
   "dependencies": {
     "@my-app/app": "*",
-    "@react-native-async-storage/async-storage": "^1.15.8",
     "next": "11.1.2",
-    "next-fonts": "^1.5.1",
-    "next-images": "^1.8.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.65.1",
+    "react": "18.1.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.70.4",
     "react-native-web": "^0.17.1",
     "setimmediate": "^1.0.5"
   },
@@ -25,6 +22,10 @@
     "@types/react-native": "^0.65.2",
     "babel-plugin-react-native-web": "^0.17.1",
     "babel-plugin-transform-define": "^2.0.1",
+    "next-compose-plugins": "^2.2.1",
+    "next-fonts": "^1.5.1",
+    "next-images": "^1.8.4",
+    "next-transpile-modules": "^9.1.0",
     "typescript": "^4.4.3"
   }
 }
